[gd_scene load_steps=4 format=3 uid="uid://c4o5lgxy1k3kp"]

[ext_resource type="Script" uid="uid://ci81tykq4g7t1" path="res://scripts/ui/pause_menu.gd" id="1_n87rw"]
[ext_resource type="PackedScene" uid="uid://cq28prmkyiwi7" path="res://scenes/ui/tooltip.tscn" id="2_0lmf7"]
[ext_resource type="PackedScene" uid="uid://b01auxdwukh0f" path="res://scenes/ui/info_panel.tscn" id="3_f6eus"]

[node name="PauseMenu" type="Control"]
z_index = 10
z_as_relative = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 200.0
scale = Vector2(1, 1.02074)
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(10000, 10000)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4432.0
offset_top = -4600.0
offset_right = 4416.0
offset_bottom = 4752.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.776471)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Paused"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 384.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 192.0
horizontal_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Ammo_HBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 32

[node name="Inventory_GridContainer" type="GridContainer" parent="."]
layout_mode = 2
offset_left = 384.0
offset_top = 320.0
offset_right = 1088.0
offset_bottom = 584.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 10

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tooltip" parent="CanvasLayer" instance=ExtResource("2_0lmf7")]
offset_right = -1110.0
offset_bottom = -625.0

[node name="info_panel" parent="." instance=ExtResource("3_f6eus")]
layout_mode = 1
offset_left = 65.0
offset_top = 230.225
offset_right = 65.0
offset_bottom = 230.225

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="ready" from="ScrollContainer/MarginContainer/Ammo_HBox" to="." method="_on_h_box_container_ready"]
